[DOC] Unificación, depuración e indexación binaria de la documentación técnica CONTEXTO:
Desactualización y fragmentación de la documentación del proyecto y la necesidad de establecer un orden de lectura mediante indexación binaria.Unificación de glosarios técnicos, resultados de certificación AAA, y eliminación de walkthroughs redundantes.